tests/errors/err_for_mut_immutable_iterable.mix
// ERROR: cannot use mutable loop binding 'n!' through immutable 'nums'
main()
    nums = [1, 2, 3]
    for n! in nums
        n = n + 1
